--- a/index.html
+++ b/index.html
@@ -1,48 +1,6 @@
 <script src="/Users/johnbellfield/Documents/Coding Files/2020 WAC Accounting JS BEASTS/librarySystem With Dependencies/simpletest.js"></script>
 <script>
-    // In AccountingJS Part 6, we wrote a librarySystem function for loading libraries. With that function, you could do stuff like this:
 
-    // librarySystem('app', function() {
-    //   return 'app';
-    // });
-
-    // console.log(librarySystem('app')); // 'app'
-    // But we'd like the ability for libraries created with librarySystem to depend on each other. For example, we'd like to be able to do the following:
-
-    // librarySystem('dependency', [], function() {
-    //   return 'loaded dependency';
-    // });
-
-    // librarySystem('app', ['dependency'], function(dependency) {
-    //   return 'app with ' + dependency;
-    // });
-
-    // librarySystem('app'); // 'app with loaded dependency'
-    // In this example, we have two libraries, 'dependency' and 'app'. The twist here is that 'app' needs the 'dependency' library to work. That's why librarySystem here also takes an array that lists required dependencies.
-
-    // In the example above, we only specify one dependency, but librarySystem should be flexible enough to accept any number (0 or more).
-
-    // Below is an example of a library that needs two dependencies.
-
-    // librarySystem('name', [], function() {
-    //   return 'Gordon';
-    // });
-
-    // librarySystem('company', [], function() {
-    //   return 'Watch and Code';
-    // });
-
-    // librarySystem('workBlurb', ['name', 'company'], function(name, company) {
-    //   return name + ' works at ' + company;
-    // });
-
-    // librarySystem('workBlurb'); // 'Gordon works at Watch and Code'
-    // Your task is to rewrite librarySystem so it accepts dependencies as described above. 
-
-  // function logHi() {
-  //   console.log('hi');
-  // }
-  // logHi();
   
   // create case: librarySystem( 'libraryName', function(){ /*return library*/ })
   // librarySystem( 'stringOfLibraryName', functionThatReturnsLibrary) in other words
@@ -76,29 +34,12 @@
 
 
 
-// function formatMoney (numbers) {
-//     if (Array.isArray(/* dependencyArray */)) {
-//       return numbers/*dependencyArray*/.map( function mapCallback(element /* dependency */) {
-//         return libraryStorage[(element/* dependency */] = callback();
-//         });
-//     } else {
-//         return '$' + numbers;
-//     }
-// }
-
-
   (function() {
     // object to save libraryNames and potentially their dependencies
     var libraryStorage = {};
 
     function librarySystem( libraryName, dependencyArray, callback) {
-      // var libraryObject = {
-      //   libraryName:  libraryName,
-      //   dependencyArray: dependencyArray,
-      //   callback: callback
-      // }
-
-      // console.log(libraryObject);
+  
       // create case
       if (arguments.length > 1) {
         if (Array.isArray(dependencyArray) && (dependencyArray.length === 0)) {
@@ -127,10 +68,23 @@
 
   })();
 
-  // tests({
-  // 'this test should fail': function() {
-  //   fail('We want to call fail();');
-  // }
-  // });
+  tests({
+  'It should return Gordon works at Watch and Code': function() {
+    librarySystem('name', [], function() {
+      return 'Gordon';
+    });
+
+    librarySystem('company', [], function() {
+      return 'Watch and Code';
+    });
+
+    librarySystem('workBlurb', ['name', 'company'], function(name, company) {
+      return name + ' works at ' + company;
+    });
+
+    var result = librarySystem('workBlurb'); 
+    eq(result, 'Gordon works at Watch and Code');
+  }
+  });
 
 </script>
